# test-cpp-python-project

./: .gitignore  .gitingnore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  compile_commands.json
.cache/clangd/index/: hello.cpp.99177415962AD0F0.idx  hello.h.8CCF89B7C29BE6AA.idx  main.cpp.3DA4A1601D3E9234.idx
include/: hello.h
src/: hello.cpp  main.cpp
src/include/: hello.h
